# pylint-strict-informational

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
src/: pylint_strict_informational.py
tests/: test_plugin.py
tests/examples/: useless_suppression.py
