[metadata]
name = pylint-strict-informational
version = 0.1
author = Polyconseil
author_email = opensource+pylint-strict-informational@polyconseil.fr
description = A pylint plugin to make pylint fail on informational messages
keywords = tools pylint
url = https://github.com/Polyconseil/pylint-strict-informational
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development

[options]
package_dir=
    =src
py_modules =
    pylint_strict_informational
install_requires =
    pylint

[options.extras_require]
dev =
    isort
    black
    check-manifest
    zest.releaser

[bdist_wheel]
universal = 1

[zest.releaser]
create-wheel = yes

[distutils]
index-servers = pypi
